<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="title" translatable="false">Title Film</string>
    <string name="overview">Overview :</string>
    <string name="movie">Movie</string>
    <string name="tv">Tv</string>
    <string name="release_date">Release Date</string>
    <string name="change_language">Settings </string>
    <string name="vote">Vote :</string>
    <string name="language">Language :</string>
    <string name="add">This item has been add from your favorite</string>
    <string name="remove">This item has been remove from your favorite</string>
    <string name="favorite">Favorite</string>
    <string name="detail">Detail</string>
    <string name="find_movie">Find Movie</string>
    <string name="find_tv">Find Tv</string>
    <string name="daily">Daily Reminder</string>
    <string name="message_reminder_daily"> Hey there lets check MovieCatalogue!</string>
    <string name="release_movie_message"> Release today, Lets check!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="turn_on_off_daily_reminder">Turn on/off Daily Reminder</string>
    <string name="turn_on_off_release_movie_reminder">Turn On/Off Release Movie Reminder</string>
    <string name="set">Set</string>
    <string name="settings_languange">Settings Languange</string>
</resources>
