<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingActivity"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_margin"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin">
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_languange"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btn_local"
            android:layout_toEndOf="@id/tv_set"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/set"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_marginStart="80dp"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_on_off_daily_reminder"
            android:textSize="15sp"
            android:textColor="@android:color/black" />
        <Switch
            android:id="@+id/switch_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_marginStart="80dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_on_off_release_movie_reminder"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
        <Switch
            android:id="@+id/switch_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</LinearLayout>