<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            tools:src="@android:color/white"
            android:contentDescription="@string/favorite" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>
            <TextView
                android:layout_below="@+id/tv_title"
                android:id="@+id/vv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote"
                android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/vote"
            android:layout_below="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_toEndOf="@+id/vv"/>
            <TextView
                android:id="@+id/lll"
                android:layout_below="@+id/vv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@android:color/black"/>
        <TextView
            android:layout_toEndOf="@+id/lll"
            android:layout_below="@+id/vote"
            android:id="@+id/tv_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_below="@+id/lll"
            android:id="@+id/tv_over"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:maxLines="2"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btnDetail"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:text="@string/detail"
            android:textAllCaps="false"/>
    </LinearLayout>